# scalapackfx

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.rst  config.cmake  make.arch.template  makefile
.github/workflows/: build.yml
cmake/: ScalapackFxUtils.cmake  scalapackfx.pc.in  scalapackfxConfig.cmake.in  scalapackfxHelpers.cmake
cmake/Modules/: FindCustomScalapack.cmake
doc/doxygen/: Doxyfile
doc/sphinx/: Makefile  about.rst  conf.py  index.rst  installing.rst  license.rst  routines.rst  using.rst
example/: CMakeLists.txt  common_module.f90  scalapackfx_example.f90  transpose.f90
include/: scalapackfx.fypp
lib/: CMakeLists.txt  blacs.fpp  blacsfx.fpp  blacsgrid.fpp  libscalapackfx.fpp  linecomm.fpp  make.build  make.deps  pblas.fpp  pblasfx.fpp  scalapack.fpp  scalapackfx.fpp  scalapackfx.fypp  scalapackfx_common.fpp  scalapackfx_tools.fpp
src/: CMakeLists.txt  GNUmakefile  Makefile.dep  Makefile.lib  blacs.F90  blacs.m4  blacsfx.F90  blacsfx.fpp  blacsfx.m4  blacsgrid.F90  blacsgrid.fpp  common.m4  libscalapackfx.F90  linecomm.F90  linecomm.m4  pblas.F90  pblas.m4  pblasfx.F90  pblasfx.m4  scalapack.F90  scalapack.m4  scalapackfx.F90  scalapackfx.fpp  scalapackfx.m4  scalapackfx_common.F90  scalapackfx_tools.F90  scalapackfx_tools.m4
subprojects/: Fortuno.cmake  fypp.cmake
test/: CMakeLists.txt  GNUmakefile  Makefile.dep  Makefile.targets  blacstestutils.f90  det.py  diag.py  make.build  make.deps  psyr_result.dat.orig  svd.py  test_common.f90  test_cpg2l.f90  test_desc.f90  test_det.f90  test_diag.f90  test_gemr2d.f90  test_linecomm.f90  test_matinv.f90  test_pposv.f90  test_psyr_pher.f90  test_remoteelements.f90  test_subgrids.f90  test_svd.f90  test_tran.f90
test/integration/cmake/: CMakeLists.txt  runtest.sh  test_build.f90
test/integration/pkgconfig/: runtest.sh
utils/export/: scalapackfx-config.cmake.in  scalapackfx.pc.in
utils/srcmanip/: set_version
